---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/while.nu
---
==== COMPILER ====
0: Variable (4 to 5) "x"
1: Int (8 to 9) "0"
2: PipeElement { expr: NodeId(1), redirection: None } (8 to 9)
3: Let { variable_name: NodeId(0), ty: None, initializer: NodeId(2), is_mutable: true } (0 to 9)
4: Int (16 to 17) "1"
5: LessThan (18 to 19)
6: Int (20 to 21) "2"
7: BinaryOp { lhs: NodeId(4), op: NodeId(5), rhs: NodeId(6) } (16 to 21)
8: Variable (26 to 28) "$x"
9: AddAssignment (29 to 31)
10: Int (32 to 33) "1"
11: BinaryOp { lhs: NodeId(8), op: NodeId(9), rhs: NodeId(10) } (26 to 33)
12: Block(BlockId(0)) (22 to 35)
13: While { condition: NodeId(7), block: NodeId(12) } (10 to 35)
14: Block(BlockId(1)) (0 to 36)
==== SCOPE ====
0: Frame Scope, node_id: NodeId(14)
  variables: [ x: NodeId(0) ]
1: Frame Scope, node_id: NodeId(12) (empty)
==== TYPES ====
0: int
1: int
2: int
3: ()
4: int
5: forbidden
6: int
7: bool
8: int
9: forbidden
10: int
11: ()
12: ()
13: ()
14: ()
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 3): node Let { variable_name: NodeId(0), ty: None, initializer: NodeId(2), is_mutable: true } not suported yet
